--- a/src/css/common.css
+++ b/src/css/common.css
@@ -19,8 +19,8 @@ body {
 }
 
 section {
-  display: grid;
-  justify-items: center;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 input {
@@ -105,4 +105,66 @@ button:focus,
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.gallery-section {
+  padding: 60px 0;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+  margin-bottom: 20px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  row-gap: 8px;
+}
+
+.gallery-item {
+  flex-basis: calc((100% - 90px) / 3);
+  margin-left: 30px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  height: 400px;
+  /* border: 1px solid #808080; */
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  gap: 8px;
+  width: 370px;
+}
+
+.gallery-image {
+  border: 1px solid #808080;
+}
+
+.stats {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  height: 48px;
+  align-items: center;
+  border: 1px solid #808080;
+}
+
+p {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+}
+
+p span {
+  font-weight: 600;
 }
