--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -3,8 +3,11 @@
   height: 48px;
   display: block;
   margin: 20px auto;
-  position: relative;
-  border: 3px solid #000000;
+  position: absolute;
+  top: 30%;
+  left: 48%;
+  transform: translate(-50%, -50%);
+  border: 3px solid #4e75ff;
   border-radius: 50%;
   box-sizing: border-box;
   animation: animloader 1s linear infinite;
@@ -14,7 +17,7 @@
   box-sizing: border-box;
   width: 6px;
   height: 24px;
-  background: #000000;
+  background: #4e75ff;
   transform: rotate(-45deg);
   position: absolute;
   bottom: -20px;
@@ -23,18 +26,18 @@
 
 @keyframes animloader {
   0% {
-    transform: translate(-10px, -10px);
+    transform: translate(-20px, -20px);
   }
   25% {
-    transform: translate(-10px, 10px);
+    transform: translate(-20px, 20px);
   }
   50% {
-    transform: translate(10px, 10px);
+    transform: translate(20px, 20px);
   }
   75% {
-    transform: translate(10px, -10px);
+    transform: translate(20px, -20px);
   }
   100% {
-    transform: translate(-10px, -10px);
+    transform: translate(-20px, -20px);
   }
 }
